Fix compact page alignment on large screens
- 🌎 Compact pages don't stretch to fill the screen
- ⛔ On large screens, this means they are limited to the left 64rem of
  the screen
- ✅ This commit auto-aligns them in the center, in the same was as the
  toolbar.

--- a/_assets/sass/custom/_page.scss
+++ b/_assets/sass/custom/_page.scss
@@ -16,6 +16,14 @@
     }
   }
 
+  @include at-media(min-width: 64rem) {
+    &.compact {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 95rem;
+    }
+  }
+
   #crt-page--content {
     .crt-lead {
       > p,
